# behatrix

./: .gitignore  MANIFEST.in  Makefile  README.TXT  README.md  README.rst  README_pip.rst  behatrix.ui  behatrix_cli.py  behatrix_gui.py  behatrix_ui.py  bsa.ui  bsa_cli.py  bsa_gui.py  bsa_multi_cl.py  bsa_ui.py  justfile  pyproject.toml  setup.py  start_behatrix.py  user_guide.md  version.py
behatrix/: README.TXT  __init__.py  __main__.py  behatrix.qrc  behatrix.ui  behatrix_cli.py  behatrix_functions.py  behatrix_gui.py  behatrix_qrc.py  behatrix_ui.py  setup.py  version.py
behatrix/icons/: behatrix.icns
src/: behatrix.ui  behatrix_cli.py  behatrix_cli2.py  behatrix_gui.py  behatrix_ui.py  permutations_test_numpy.py  version.py
