[project]
name = "behatrix"
version = "0.15"
description = "Behatrix - Behavioral Sequences Analysis with permutation test"
authors = [{ name="Olivier Friard", email="olivier.friard@unito.it" }]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"

classifiers=[
        "Operating System :: OS Independent",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Visualization",
        "Operating System :: OS Independent"
    ]
dependencies = [
    "numpy==2.1.2",
    #>1.24.4",
    #>=6.6.3.1",
    "pyside6==6.8.0.1",
    "shiboken6>=6.8.0.1",
]

[project.urls]
Homepage = "https://www.boris.unito.it/behatrix"
Documentation = "https://github.com/olivierfriard/behatrix/blob/master/README.rst"
Change_log = "https://github.com/olivierfriard/behatrix/wiki/revision-history"
Source_code = "https://github.com/olivierfriard/behatrix"
Issues = "https://github.com/olivierfriard/behatrix/issues"

[project.scripts]
behatrix = "behatrix:main"
